BAINOP/SAVE_LOGS/[nguyen bao huyen tra][REPETITIONS].cpp.log
nguyen bao huyen tra‣REPETITIONS: ℱ Dịch lỗi
REPETITIONS.cpp
"C:\Program Files (x86)\Themis\gcc\bin\g++.exe" -std=c++14 "REPETITIONS.cpp" -pipe -O2 -s -static -lm -x c++ -o"REPETITIONS.exe" -Wl,--stack,66060288|@WorkDir=C:\ProgramData\ThemisWorkSpace\WaitRoom43041\
REPETITIONS.cpp:3:18: error: 'maxx' does not name a type; did you mean 'fmaxl'?
 long long i, d=0;maxx=0;
                  ^~~~
                  fmaxl
REPETITIONS.cpp: In function 'int main()':
REPETITIONS.cpp:13:9: error: 'maxx' was not declared in this scope
         maxx=max(maxx,d);
         ^~~~
REPETITIONS.cpp:13:9: note: suggested alternative: 'main'
         maxx=max(maxx,d);
         ^~~~
         main
REPETITIONS.cpp:15:12: error: 'maxx' was not declared in this scope
      cout<<maxx;
            ^~~~
REPETITIONS.cpp:15:12: note: suggested alternative: 'main'
      cout<<maxx;
            ^~~~
            main
Dịch lỗi!

